<?xml version="1.0" encoding="UTF-8"?>
<resources
  xmlns:android="http://schemas.android.com/apk/res/android">

  <string
    name="applicationName">NuxeoAndroid</string>
  <string
    name="applicationDescription">Simple Nuxeo Android application.</string>

 <string
    name="applicationTitle">Nuxeo Android Client</string>

  <string
    name="problem">Problem</string>
  <string
    name="unhandledProblem">You have unveiled a bug in the application, and we are sorry for
    that!\n\nWould you be kind enough to report that problem to us? Thank you.</string>
  <string
    name="dialogButton_unhandledProblem">Send</string>
  <string
    name="progressDialogMessage_unhandledProblem">Retrieving and computing the application log...</string>
  <string
    name="unavailableService">Unavailable service: sorry, the current activity cannot resume.\n\nHave
    you checked you Internet connection?\n\nPlease, press \"OK\".</string>
  <string
    name="connectivityProblem">Your terminal is not currently connected to Internet, or your
    connection is very poor.\n\nPlease, check your connection and try again.</string>
  <string
    name="unavailableItem">Cannot retrieve the element: sorry, the current activity cannot
    resume.\n\nHave you checked you Internet connection?\n\nPlease, press \"OK\"</string>

  <string name="NuxeoAndroidSplashScreen_dialogMessage_noSdCard">No SD card is currently mounted/available on the device: the
    application cannot start!</string>

  <string name="LoginScreen_connect">Connect</string>

  <string
    name="Settings_version">Version</string>

  <string
    name="Home_menu_settings">Settings</string>
  <string
    name="Home_menu_about">About</string>
  <string
    name="Home_menu_offline">Offline</string>

  <string name="Home_search">Search</string>
  <string name="Home_myDocuments">My Documents</string>
  <string name="Home_clipboard">Clipboard</string>
  <string name="Home_savedSearches">Saved Searches</string>
  <string name="Home_browse">Browse</string>
  <string name="Home_tasks">Tasks</string>

  <string name="DocumentsSearchActivity_search_title">Search</string>
  <string name="DocumentsSearchActivity_search_text_hint">Keywords</string>
  <string name="DocumentsSearchActivity_search_voice_prompt">Please, say your keywords</string>

  <string name="Settings_signOut">Sign out</string>
  <string name="Settings_signOutExplanation">Signs out from the current account</string>
  <string name="preferences_server">Server</string>
  <string name="title_server_url">Server URL</string>
  <string name="summary_server_url">Sets the server URL</string>
  <string name="title_server_login">Login</string>
  <string name="title_server_password">Password</string>

  <string name="PdfViewAction">View as PDF</string>
  <string name="DownloadAction">Download</string>
  <string name="RefreshOperationsAction">Refetch operations definition</string>
  <string name="ClearCacheAction">Clear cache</string>
</resources>
