<?xml version="1.0" encoding="utf-8"?>
<searchable
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:includeInGlobalSearch="false"
  android:searchMode="queryRewriteFromText"
  android:icon="@drawable/icon"
  android:label="@string/DocumentsSearchActivity_search_title"
  android:hint="@string/DocumentsSearchActivity_search_text_hint"
  android:inputType="text"
  android:imeOptions="actionSearch"
  android:voiceSearchMode="showVoiceSearchButton|launchRecognizer"
  android:voiceLanguageModel="free_form"
  android:voicePromptText="@string/DocumentsSearchActivity_search_voice_prompt"
  android:searchSuggestThreshold="2"
  android:searchSuggestAuthority="org.nuxeo.android.simpleclient.provider.PartnersSearchProvider"
  android:searchSettingsDescription="@string/DocumentsSearchActivity_search_text_hint"
  android:searchSuggestSelection=" ? "
  android:searchSuggestIntentAction="android.intent.action.SEARCH"
/>
