<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ImageView
    android:id="@+id/logo"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scaleType="fitCenter"
    android:src="@drawable/nuxeo_logo" />

  <EditText
    android:id="@+id/editLogin"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/defaultPadding"
    android:layout_centerInParent="true"
    android:hint="@string/title_server_login" />

  <EditText
    android:id="@+id/editServerUrl"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/defaultPadding"
    android:layout_above="@id/editLogin"
    android:hint="@string/title_server_url" />

  <EditText
    android:id="@+id/editPassword"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/defaultPadding"
    android:layout_below="@id/editLogin"
    android:hint="@string/title_server_password" />

  <Button
    android:id="@+id/loginButton"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/defaultPadding"
    android:layout_below="@id/editPassword"
    android:text="@string/title_server_login" />

</RelativeLayout>
