<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
>
  <TextView
    android:id="@+id/version"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:visibility="visible"
    android:textColor="#F00"
    android:textStyle="bold"
  />
  <TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:stretchColumns="0,2,4"
   >
    <View
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1"
    />
    <TableRow
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
     >
      <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
      />
      <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
      >
        <ImageButton
          android:id="@+id/searchDocuments"
          android:src="@drawable/search"
          style="@style/Home_icon"
        />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Home_search"
          style="@style/Home_text"
        />
      </LinearLayout>
      <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
      />
      <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
      >
        <ImageButton
          android:id="@+id/myDocuments"
          android:layout_width="wrap_content"
          android:src="@drawable/my_documents"
          style="@style/Home_icon"
        />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Home_myDocuments"
          style="@style/Home_text"
        />
      </LinearLayout>
      <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
      />
     </TableRow>
    <View
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1"
    />
    <TableRow
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
     >
      <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
      />
      <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:clipChildren="false"
      >
        <ImageButton
          android:id="@+id/clipboard"
          android:src="@drawable/clipboard"
          style="@style/Home_icon"
        />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Home_clipboard"
          style="@style/Home_text"
        />
        </LinearLayout>
        <View
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
        />
      <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
      >
        <ImageButton
          android:id="@+id/savedSearches"
          android:src="@drawable/saved_searches"
          style="@style/Home_icon"
        />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Home_savedSearches"
          style="@style/Home_text"
        />
      </LinearLayout>
      <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
      />
     </TableRow>
    <View
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1"
    />
    <TableRow
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
     >
      <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
      />
      <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:clipChildren="false"
      >
        <ImageButton
          android:id="@+id/explorer"
          android:src="@drawable/explorer"
          style="@style/Home_icon"
        />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Home_browse"
          style="@style/Home_text"
        />
        </LinearLayout>
        <View
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
        />
      <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
      >
        <ImageButton
          android:id="@+id/tasks"
          android:src="@drawable/tasks"
          style="@style/Home_icon"
        />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Home_tasks"
          style="@style/Home_text"
        />
      </LinearLayout>
      <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
      />
     </TableRow>
    <View
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1"
    />
  </TableLayout>
</LinearLayout>
